--- a/inicio.html
+++ b/inicio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="inicio.css">
 </head>
 <body>
+    <center>
     <div class="menu">
         <a href="home.html" class="menu-item">
             <i class="fas fa-home"></i>
@@ -26,5 +27,6 @@
             <h2>Opciones</h2>
         </a>
     </div>
+        </center>
 </body>
 </html>
