--- a/teclado.html
+++ b/teclado.html
@@ -37,7 +37,7 @@
         <button class="key" data-value="J"><img src="img/abecedario/j.jpg" alt="Tecla J"></button>
         <button class="key" data-value="K"><img src="img/abecedario/k.jpg" alt="Tecla K"></button>
         <button class="key" data-value="L"><img src="img/abecedario/l.jpg" alt="Tecla L"></button>
-        <button class="key" data-value="Ñ"><img src="img/abecedario/ñ.JPG" alt="Tecla Ñ"></button>
+        <button class="key" data-value="Ñ"><img src="img/abecedario/nn.JPG" alt="Tecla Ñ"></button>
 
         <!-- Tercera fila de teclas -->
         <button class="key" data-value="Z"><img src="img/abecedario/z.jpg" alt="Tecla Z"></button>
